--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/svg+xml" href="icono/favicon.svg">
+    <link rel="apple-touch-icon" href="icono/icon-192x192.png">
     <meta name="theme-color" content="#5D0A14">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="CuasiCoromoto">
 </head>
 
 <body>
