Ajustes al index.html

--- a/index.html
+++ b/index.html
@@ -136,6 +136,22 @@
         <div id="sub-contenido" class="contenido-panel"></div>
     </div>
 
+    <div id="pwa-install-banner" class="pwa-banner">
+        <div class="pwa-banner-content">
+            <span class="material-icons-round">install_mobile</span>
+            <div class="pwa-banner-text">
+                <b>Instalar Aplicación</b>
+                <span>Accede más rápido y úsala sin conexión.</span>
+            </div>
+        </div>
+        <div class="pwa-banner-actions">
+            <button id="pwa-install-btn" class="btn-instalar">Instalar</button>
+            <button id="pwa-close-banner" class="btn-cerrar-banner">
+                <span class="material-icons-round">close</span>
+            </button>
+        </div>
+    </div>
+
     <!-- Lógica de la aplicación -->
     <script src="script.js"></script>
     <script>
