Ajustes al index.html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Cabecera -->
     <header class="cabecera-minimalista">
         <div class="linea"></div>
-        <div><span>Cuasiparroquia</span>
+        <div><span>Cuasiparroquia x</span>
             <h1>Nuestra Señora de Coromoto</h1>
         </div>
     </header>
